Starting to implement the Joystick library here
Still need to add debouncing and the logic to detect key presses
then I'll finish the thing

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,10 +12,10 @@
 platform = atmelavr
 board = sparkfun_promicro16
 framework = arduino
-# upload_port = /dev/ttyACM0
 build_flags = -Wl,-Map=${BUILD_DIR}/${PROGNAME}.map
 extra_scripts = post:check.py
 max_ram = 2560
 max_ram_perc = 80
 max_flash = 28672
 max_flash_perc = 90
+lib_deps = mheironimus/Joystick@^2.1.1
